--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
@@ -45,10 +45,11 @@
                             <navigationButtons:FoodTopicNavigationButton Command="{Binding OpenFoodTopicCommand}" />
                             <navigationButtons:WeightTopicNavigationButton Command="{Binding OpenWeightTopicCommand}" />
                             <navigationButtons:PoopTopicNavigationButton Command="{Binding OpenPoopTopicCommand}" />
-                            <navigationButtons:AgeTopicNavigationButton Command="{Binding OpenAgeTopicCommand}" />
+                            <navigationButtons:AgeTopicNavigationTopicButton Command="{Binding OpenAgeTopicCommand}" />
                             <navigationButtons:TirednessTopicNavigationButton Command="{Binding OpenTirednessTopicCommand}" />
                             <navigationButtons:SleepTopicNavigationButton Command="{Binding OpenSleepTopicCommand}" />
                             <navigationButtons:AreaPreferenceNavigationButton Command="{Binding OpenAreaPreferenceTopicCommand}" />
+                            <navigationButtons:FlowerNavigationTopicButton Command="{Binding OpenFlowerTopicCommand}" />
                         </WrapPanel>
                     </Grid>
                 </Border>
