--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/Topics/SleepTopic/SleepTopicUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/Topics/SleepTopic/SleepTopicUserControl.xaml
@@ -120,21 +120,10 @@
             <WrapPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0, 15, 15, 15">
                 <Border BorderBrush="#060100" BorderThickness="3,3,0,0" >
                     <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
-                        <Image Width="286" Height="202" Source="Media/sleep-condition-screen.jpg" Stretch="UniformToFill">
+                        <Image Width="600" Height="202" Source="Media/profile-section.jpg" Stretch="UniformToFill">
                             <b:Interaction.Triggers>
                                 <b:EventTrigger EventName="MouseLeftButtonDown">
-                                    <b:InvokeCommandAction Command="{Binding SpeakSleepyScreenCommand}" />
-                                </b:EventTrigger>
-                            </b:Interaction.Triggers>
-                        </Image>
-                    </Border>
-                </Border>
-                <Border BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15, 0 ,0 ,0" >
-                    <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
-                        <Image Width="270" Height="202" Source="Media/sleep-condition-overworld.jpg" Stretch="UniformToFill">
-                            <b:Interaction.Triggers>
-                                <b:EventTrigger EventName="MouseLeftButtonDown">
-                                    <b:InvokeCommandAction Command="{Binding SpeakSleepyOverworldCommand}" />
+                                    <b:InvokeCommandAction Command="{Binding SpeakProfileSectionSleepingScheduleCommand}" />
                                 </b:EventTrigger>
                             </b:Interaction.Triggers>
                         </Image>
