--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/Topics/SleepyTopic/SleepyTopicUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/Topics/SleepyTopic/SleepyTopicUserControl.xaml
@@ -1,13 +1,13 @@
-<UserControl x:Class="DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.Topics.TirednessTopic.TirednessTopicUserControl"
+<UserControl x:Class="DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.Topics.SleepyTopic.SleepyTopicUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:tirednessTopic="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.Topics.TirednessTopic"
+             xmlns:sleepTopic="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.Topics.SleepyTopic"
              Height="554"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance Type=tirednessTopic:TirednessTopicViewModel, IsDesignTimeCreatable=True}">
+             d:DataContext="{d:DesignInstance Type=sleepTopic:SleepyTopicViewModel, IsDesignTimeCreatable=True}">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -69,7 +69,7 @@
                                             Content="📖"
                                             Command="{Binding SpeakWikiTextCommand}">
                                         <Button.ToolTip>
-                                            <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Ask shellmon to explain tiredness again" />
+                                            <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Ask shellmon to explain sleep again" />
                                         </Button.ToolTip>
                                     </Button>
                                 </Grid>
@@ -105,10 +105,10 @@
                                         Style="{StaticResource DefaultButtonStyle}"
                                         Margin="0,0, 0, 5"
                                         Height="{StaticResource DefaultButtonHeight}"
-                                        Content="Guide: Tiredness"
-                                        Command="{Binding OpenGuideTirednessChapterCommand}">
+                                        Content="Guide: Sleeping"
+                                        Command="{Binding OpenGuideSleepingChapterCommand}">
                                     <Button.ToolTip>
-                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Tiredness chapter of the guide" />
+                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Sleeping chapter of the guide" />
                                     </Button.ToolTip>
                                 </Button>
 
@@ -116,10 +116,10 @@
                                         Style="{StaticResource DefaultButtonStyle}"
                                         Margin="0,0, 0, 5"
                                         Height="{StaticResource DefaultButtonHeight}"
-                                        Content="Guide: Tired"
-                                        Command="{Binding OpenGuideTiredChapterCommand}">
+                                        Content="Guide: Sleepy"
+                                        Command="{Binding OpenGuideSleepyChapterCommand}">
                                     <Button.ToolTip>
-                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Tired chapter of the guide" />
+                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Sleepy chapter of the guide" />
                                     </Button.ToolTip>
                                 </Button>
                             </StackPanel>
@@ -131,10 +131,10 @@
             <WrapPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0, 15, 15, 15">
                 <Border BorderBrush="#060100" BorderThickness="3,3,0,0" >
                     <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
-                        <Image Width="286" Height="202" Source="Media/drimogemon-carry-dirt.jpg" Stretch="UniformToFill">
+                        <Image Width="286" Height="202" Source="Media/sleepy-condition-screen.jpg" Stretch="UniformToFill">
                             <b:Interaction.Triggers>
                                 <b:EventTrigger EventName="MouseLeftButtonDown">
-                                    <b:InvokeCommandAction Command="{Binding SpeakDrimogemonCarryDirtQuestCommand}" />
+                                    <b:InvokeCommandAction Command="{Binding SpeakSleepyScreenCommand}" />
                                 </b:EventTrigger>
                             </b:Interaction.Triggers>
                         </Image>
@@ -142,10 +142,10 @@
                 </Border>
                 <Border BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15, 0 ,0 ,0" >
                     <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
-                        <Image Width="270" Height="202" Source="Media/training-area.jpg" Stretch="UniformToFill">
+                        <Image Width="270" Height="202" Source="Media/sleepy-condition-overworld.jpg" Stretch="UniformToFill">
                             <b:Interaction.Triggers>
                                 <b:EventTrigger EventName="MouseLeftButtonDown">
-                                    <b:InvokeCommandAction Command="{Binding SpeakTrainingGymCommand}" />
+                                    <b:InvokeCommandAction Command="{Binding SpeakSleepyOverworldCommand}" />
                                 </b:EventTrigger>
                             </b:Interaction.Triggers>
                         </Image>
